--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#c20586">
-    <item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/black">
+    <item android:state_pressed="false">
         <shape android:shape="oval">
             <solid android:color="@color/transparent"/>
             <stroke android:color="@color/black" android:width="7dp"/>
         </shape>
     </item>
-</ripple>
+    <item android:state_pressed="true">
+        <shape android:shape="oval">
+            <solid android:color="@color/transparent"/>
+            <stroke android:color="@color/clicked_green" android:width="7dp"/>
+        </shape>
+    </item>
+</selector>
