--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,18 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/txt_number_counter"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="22dp"
+        android:text="@string/number_counter"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_click"
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:textSize="35sp"
