--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_gravity="center_horizontal"
         android:text="@string/click_hero"
-        android:textSize="36sp"
+        android:textSize="42sp"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:textColor="@color/black"
@@ -53,5 +53,15 @@
         android:progress="1"
         android:progressTint="@color/black"
         android:layout_width="match_parent"
+        android:scaleY="3"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/txt_level"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:textSize="24sp"
+        android:text="@string/level"
+        android:textColor="@color/black"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
